# defis-lia-generatif

./: .dvcignore  .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-DATA  LICENSE-DOCS  README.md  SECURITY.md  deny.toml  dvc.yaml  package-lock.json  rust-toolchain.toml  rustfmt.toml
.dvc/: config
.github/workflows/: app-release.yml  ci.yml  dvc-nightly.yml  extension-release.yml  ingest-nightly.yml  site-deploy.yml  team-aggregator-release.yml  team-docker.yml  zenodo.yml
briefs/: COMMIT-PLAN-C37-C42.md  COMMIT-PLAN-C43-C45.md
briefs/chantiers/: C01-RETROSPECTIVE.md  C01-foundation-pipeline-medaillon.md  C02-source-comparia.md  C03-source-rte-iris.md  C04-RETROSPECTIVE.md  C04-gold-assembly.md  C05-estimator-monte-carlo.md  C06-model-presets.md  C07-validation-croisee.md  C08-audit-ledger.md  C09-PROMPT-CLAUDE-CODE.md  C09-RETROSPECTIVE.md  C09-tauri-integration.md  C10-PROMPT-CLAUDE-CODE.md  C10-onboarding-personas.md  C11-simulateur-et-si.md  C12-datacenters-europe.md  C13-territoire-fr-sankey.md  C14-rapport-csrd-agec.md  (+48 more)
crates/sobria-app/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/sobria-app/capabilities/: default.json
crates/sobria-app/icons/: README.md  icon.icns
crates/sobria-app/src/: batch.rs  bridge_install.rs  bridge_server.rs  dashboard.rs  dto.rs  error.rs  extension_store.rs  goals_store.rs  lib.rs  logic.rs  main.rs  pairing.rs  preferences_store.rs  project_store.rs  state.rs  team_client.rs  team_settings.rs
crates/sobria-app/tests/: bridge_manifests.rs  bridge_server.rs
crates/sobria-audit/: Cargo.toml  README.md
crates/sobria-audit/src/: entry.rs  error.rs  ledger.rs  lib.rs
crates/sobria-bridge/: Cargo.toml  README.md  manifest.template.json
crates/sobria-bridge/manifest/: com.sobria.bridge.json.tmpl
crates/sobria-bridge/scripts/: install-dev.ps1  install-dev.sh
crates/sobria-bridge/src/: lib.rs  main.rs
crates/sobria-bridge/tests/: protocol.rs  socket_forward.rs
crates/sobria-core/: Cargo.toml  README.md
crates/sobria-core/src/: context_overhead.rs  datacenter.rs  emission.rs  error.rs  estimation.rs  indicators.rs  input_modality.rs  lib.rs  methodology.rs  model.rs  preferences.rs  validation.rs
crates/sobria-estimator/: Cargo.toml  README.md
crates/sobria-estimator/src/: distributions.rs  effective_tokens.rs  engine.rs  engine_trait.rs  equivalents.rs  error.rs  lib.rs  model_presets.rs  params.rs  scenarios.rs  yearly_forecast.rs
crates/sobria-estimator/src/engines/: ecologits.rs  factory.rs  mod.rs
crates/sobria-estimator/src/validation/: cases.rs  mod.rs
crates/sobria-export/: Cargo.toml  README.md
crates/sobria-export/src/: datasheet.rs  error.rs  lib.rs  provo.rs  report.rs  summary.rs
crates/sobria-geoloc/: Cargo.toml  README.md
crates/sobria-geoloc/data/: datacenters.json  datacenters_demo.json  rte_mix_fr.json  territoire_fr.json
crates/sobria-geoloc/src/: datacenters.rs  lib.rs  sankey_fr.rs  territoire_fr.rs
crates/sobria-ingest/: Cargo.toml
crates/sobria-ingest/src/: cli.rs  context.rs  datasheet.rs  download.rs  error.rs  gold.rs  hash.rs  iris_link.rs  layer.rs  lib.rs  lineage.rs  main.rs  manifest.rs  registry.rs  silver_validate.rs
crates/sobria-ingest/src/sources/: comparia.rs  mod.rs  rte_iris.rs  territoire_fr.rs
crates/sobria-ingest/tests/: comparia.rs  copper_rehydrate.rs  datasheet_jsonld.rs  gold_pipeline.rs  rte_iris.rs  silver_validation.rs
crates/sobria-ingest/tests/snapshots/: silver_validation__schema_comparia_conversations.snap  silver_validation__schema_comparia_reactions.snap  silver_validation__schema_comparia_votes.snap  silver_validation__schema_rte_iris_consommation.snap
crates/sobria-referentiel/: Cargo.toml  README.md
crates/sobria-referentiel/src/: lib.rs
crates/sobria-team-aggregator/: .dockerignore  Cargo.toml  Dockerfile  README.md
crates/sobria-team-aggregator/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  policy.rs
crates/sobria-team-aggregator/src/alerts/: checker.rs  mod.rs  notify.rs  periods.rs  store.rs
crates/sobria-team-aggregator/src/commands/: admin.rs  code.rs  config.rs  init.rs  mod.rs  serve.rs
crates/sobria-team-aggregator/src/crypto/: mod.rs  password.rs  secret.rs  tls.rs
crates/sobria-team-aggregator/src/exports/: csrd.rs  csv.rs  mod.rs  prov_o.rs
crates/sobria-team-aggregator/src/server/: embedded_web.rs  error.rs  mod.rs  routes.rs  tls.rs
crates/sobria-team-aggregator/src/server/api/: enroll.rs  estimations.rs  login.rs  me.rs  mod.rs  refresh.rs
crates/sobria-team-aggregator/src/server/api/admin/: alerts.rs  analytics.rs  codes.rs  exports.rs  mod.rs  user_detail.rs  users.rs
crates/sobria-team-aggregator/src/server/auth/: jwt.rs  middleware.rs  mod.rs  refresh.rs
crates/sobria-team-aggregator/src/storage/: admins.rs  analytics.rs  enrollment_codes.rs  estimations.rs  mod.rs  schema.rs  tokens.rs  users.rs
crates/sobria-team-aggregator/tests/: cli_admin.rs  integration_admin.rs  integration_alerts.rs  integration_api.rs  integration_embedded_ui.rs  integration_exports.rs  regen_cert.rs  serve_health.rs
docs/: CAHIER-DES-CHARGES-v1.0.md  CANDIDATURE-DATA-GOUV.md  LICENSES-FONTS.md  ROADMAP.md  etat-des-lieux-2026-05-17.md
extension/: .gitignore  .prettierignore  README.md  eslint.config.js  manifest.firefox.json  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
notebook/: validation.qmd
scripts/: bootstrap.sh  build-all.sh  sync-docs.mjs
site/: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  README.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json
sobr-ia-design-system/: README.md
tools/fixturegen/: Cargo.toml
tools/fixturegen/src/: main.rs
web/: .prettierignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
web-team/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+307 files in other folders)
