# sobria-app — wrapper Tauri 2 (ADR-0001)
[package]
name = "sobria-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Application Tauri 2 — wrapper natif Sobr.ia"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
sobria-core = { path = "../sobria-core" }
sobria-referentiel = { path = "../sobria-referentiel" }
sobria-estimator = { path = "../sobria-estimator" }
sobria-audit = { path = "../sobria-audit" }
sobria-geoloc = { path = "../sobria-geoloc" }
sobria-import = { path = "../sobria-import" }
sobria-export = { path = "../sobria-export" }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
