# sobria-app — wrapper Tauri 2 (ADR-0001) + commandes IPC (C09)
[package]
name = "sobria-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Application Tauri 2 — wrapper natif Sobr.ia"

[lib]
name = "sobria_app"
path = "src/lib.rs"

[[bin]]
name = "sobria-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
sobria-core = { path = "../sobria-core" }
sobria-referentiel = { path = "../sobria-referentiel" }
sobria-estimator = { path = "../sobria-estimator" }
sobria-audit = { path = "../sobria-audit" }
sobria-geoloc = { path = "../sobria-geoloc" }
sobria-import = { path = "../sobria-import" }
sobria-export = { path = "../sobria-export" }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
csv = { workspace = true }
# C27.5 pairing : OS RNG + hash secret partagé
rand = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
