# sobria-app — wrapper Tauri 2 (ADR-0001) + commandes IPC (C09)
[package]
name = "sobria-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Application Tauri 2 — wrapper natif Sobr.ia"

[lib]
name = "sobria_app"
path = "src/lib.rs"

[[bin]]
name = "sobria-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
sobria-core = { path = "../sobria-core" }
sobria-referentiel = { path = "../sobria-referentiel" }
sobria-estimator = { path = "../sobria-estimator" }
sobria-audit = { path = "../sobria-audit" }
sobria-geoloc = { path = "../sobria-geoloc" }
sobria-import = { path = "../sobria-import" }
sobria-export = { path = "../sobria-export" }
# C27 patch v0.6.0 — socket forward bridge ↔ app : on partage les types
# `BridgeRequest`/`BridgeResponse` et `default_socket_path()` avec le bridge.
sobria-bridge = { path = "../sobria-bridge" }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
csv = { workspace = true }
# C27.5 pairing : OS RNG + hash secret partagé
rand = { workspace = true }
sha2 = { workspace = true }
# C27 patch v0.6.0 — Argon2id remplace SHA-256+sel pour le hash du secret
# pairing (cf. brief Patch 3).
argon2 = { workspace = true }
# C28.6 — Mode Équipe : client REST HTTPS vers sobria-team-aggregator.
# rustls + accept-invalid-cert (opt-in) pour les certs auto-signés.
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
