# sobria-audit — squelette S1
[package]
name = "sobria-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Crate Sobr.ia — audit (squelette S1, à implémenter dans le sprint dédié)"

[dependencies]
sobria-core = { path = "../sobria-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
