# sobria-audit — ledger ACID chaîné (chantier C08)
[package]
name = "sobria-audit"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ledger ACID SQLite WAL chaîné SHA-256 pour la traçabilité CSRD"

[dependencies]
sobria-core = { path = "../sobria-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
