# sobria-estimator — moteur Monte-Carlo (ADR-0004 + chantier C05)
[package]
name = "sobria-estimator"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Moteur Monte-Carlo de l'écosystème Sobr.ia (formule AFNOR SPEC 2314)"

[dependencies]
sobria-core = { path = "../sobria-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
