# sobria-export — génération de rapports CSRD / AGEC / SPEC 2314 (M22)
[package]
name = "sobria-export"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Génération de rapports PDF + PROV-O JSON-LD pour Sobr.ia (CSRD/AGEC/AFNOR SPEC 2314)"

[dependencies]
sobria-core = { path = "../sobria-core" }
sobria-audit = { path = "../sobria-audit" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
printpdf = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
