# sobria-geoloc — squelette S1
[package]
name = "sobria-geoloc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Crate Sobr.ia — geoloc (squelette S1, à implémenter dans le sprint dédié)"

[dependencies]
sobria-core = { path = "../sobria-core" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
