# sobria-referentiel — lecture du référentiel Gold (C26.5)
[package]
name = "sobria-referentiel"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Crate Sobr.ia — accès lecture au référentiel Gold (data/gold/referentiel.sqlite)"

[dependencies]
sobria-core = { path = "../sobria-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
